fix for canopy icons on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -43,7 +43,7 @@ body {
 }
 
 .heading {
-  font-size: 2.8em;
+  font-size: 2.6em;
   font-weight: bold;
   color: $primary-color;
 }
